[package]
name = "clinker-server"
version = "0.1.0"
authors = ["Zack Angelo <zackangelo@gmail.com>"]
edition = "2018"

[dependencies]
clinker-gen = { path = "../clinker-gen" }
clinker-consul = { path = "../clinker-consul" }
tonic = { git = "https://github.com/hyperium/tonic", rev = "01e72d9a95c2dad6bf03db25ddb597b3c972981e" }
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
tokio = "=0.2.0-alpha.6"
tokio-timer = "0.3.0-alpha.6"
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-stream = "0.1.1"
http = "0.1"
log = "0.4.0"
env_logger = "0.7"
